# CellularAutomaton

./: CMakeLists.txt  Makefile  README.md  automaton.cpp  automaton.h  main.cpp  rgbcolor.h
include/: automaton.h  rgbcolor.h
source/: automaton.cpp  main.cpp
